--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section>
         <div class="container">
             <h2>Проекты</h2>
-            <p>Мы работаем над новым проектом: <strong>Игра про лутинг</strong>. Следи за новостями!</p>
+            <p>Мы работаем над новым проектом: <strong>Find & Flip</strong>. Следи за новостями!</p>
         </div>
     </section>
 
