--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sublayer Production</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/icon.png">
 </head>
 <body>
     <header>
@@ -14,6 +15,19 @@
             <button id="themeToggle">Светлая тема</button>
         </div>
     </header>
+    
+    <div class="burger" id="burger">
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+
+<nav class="side-menu" id="sideMenu">
+    <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/devblog/devblog.html">Девблог</a></li>
+    </ul>
+</nav>
 
     <section>
         <div class="container">
