--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <div class="container">
             <h1>Sublayer Production</h1>
             <p>Мы делаем крутые проекты, игры и контент</p>
-            <button id="themeToggle">Светлая тема</button>
         </div>
     </header>
     
@@ -25,6 +24,7 @@
 <nav class="side-menu" id="sideMenu">
     <ul>
         <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/devblogs/devblog.html">Девблог</a></li>
     </ul>
 </nav>
 
