--- a/pages/devblogs/devblog.html
+++ b/pages/devblogs/devblog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Девблог</title>
+    <title>Блог</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../../img/icon.png">
     <script defer src="script.js"></script>
@@ -11,8 +11,8 @@
 <body>
 
     <header>
-        Девблог
-        <p>Девблоги про игры и сайты</p>
+        Блог
+        <p>Блоги про игры и сайты</p>
     </header>
     
     <div class="burger" id="burger">
@@ -24,7 +24,7 @@
 <nav class="side-menu" id="sideMenu">
     <ul>
         <li><a href="../../index.html">Главная</a></li>
-        <li><a href="pages/devblog/devblog.html">Девблог</a></li>
+        <li><a href="pages/devblog/devblog.html">Блог</a></li>
     </ul>
 </nav>
 
