--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <nav class="side-menu" id="sideMenu">
     <ul>
         <li><a href="index.html">Главная</a></li>
-        <li><a href="pages/devblogs/devblog.html">Девблог</a></li>
+        <li><a href="pages/devblogs/devblog.html">Блог</a></li>
     </ul>
 </nav>
 
