--- a/pages/devblogs/devblog.html
+++ b/pages/devblogs/devblog.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Блог</title>
+    <title>Девблог</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../../img/icon.png">
-    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -24,7 +23,8 @@
 <nav class="side-menu" id="sideMenu">
     <ul>
         <li><a href="../../index.html">Главная</a></li>
-        <li><a href="pages/devblog/devblog.html">Блог</a></li>
+        <li><a href="../channels/channels.html">Наши каналы</a></li>
+        <li><a href="#">Блог</a></li>
     </ul>
 </nav>
 
