--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <nav class="side-menu" id="sideMenu">
     <ul>
-        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Главная</a></li>
+        <li><a href="pages/channels/channels.html">Наши каналы</a></li>
         <li><a href="pages/devblogs/devblog.html">Блог</a></li>
     </ul>
 </nav>
@@ -35,15 +36,7 @@
         </div>
     </section>
 
-    <section>
-        <div class="container">
-            <h2>Наши каналы</h2>
-            <div class="buttons">
-                <a href="https://t.me/perehodnicsublayer/8" class="btn">YouTube</a>
-                <a href="https://t.me/perehodnicsublayer/6" class="btn">Telegram</a>
-            </div>
-        </div>
-    </section>
+    
 
     <section>
         <div class="container">
